[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2, 1, 0, 0, 0, 0, -6, 2, 0, 0, 0, 0, 722, -1, 0, 0, 0, 0, 719, 467, 0, 0, 0, 0, 1, 480, 0, 0, 0, 0, -2, 1 )
}

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
Mob = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

[node name="StartPosition" type="Position2D" parent="." index="1"]

position = Vector2( 334, 216 )
_sections_unfolded = [ "Transform" ]

[node name="MobTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="StartTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="MobPath" type="Path2D" parent="." index="5"]

position = Vector2( 1, 1 )
curve = SubResource( 1 )

[node name="MobspawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -2, 1 )
rotation = 0.209551
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="HUD" parent="." index="6" instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="StartGame" from="HUD" to="." method="_on_HUD_StartGame"]


